--- a/LTApp/App/Resources/Info.plist
+++ b/LTApp/App/Resources/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Location access needed for area monitoring</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location access needed for area monitoring</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
